--- a/client/bower.json
+++ b/client/bower.json
@@ -23,6 +23,7 @@
     "angular": "~1.3.5",
     "ionicons": "~2.0.0",
     "angular-ui-router": "~0.2.13",
-    "angular-sanitize": "~1.3.5"
+    "angular-sanitize": "~1.3.5",
+    "leaflet": "~0.7.3"
   }
 }
