--- a/client/bower.json
+++ b/client/bower.json
@@ -24,6 +24,7 @@
     "ionicons": "~2.0.0",
     "angular-ui-router": "~0.2.13",
     "angular-sanitize": "~1.3.5",
-    "leaflet": "~0.7.3"
+    "leaflet": "~0.7.3",
+    "angular-hammer": "~1.2.4"
   }
 }
