--- a/client/bower.json
+++ b/client/bower.json
@@ -25,6 +25,7 @@
     "angular-ui-router": "~0.2.13",
     "angular-sanitize": "~1.3.5",
     "leaflet": "~0.7.3",
-    "angular-hammer": "~1.2.4"
+    "angular-hammer": "~1.2.4",
+    "zepto": "~1.1.6"
   }
 }
