--- a/client/bower.json
+++ b/client/bower.json
@@ -26,6 +26,7 @@
     "angular-sanitize": "~1.3.5",
     "leaflet": "~0.7.3",
     "angular-hammer": "~1.2.4",
-    "zepto": "~1.1.6"
+    "zepto": "~1.1.6",
+    "angular-resource": "~1.3.7"
   }
 }
